homelab/k8s/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sancho
  namespace: sancho
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`sancho.leopaska.xyz`)
      kind: Rule
      services:
        - name: sancho
          namespace: sancho
          port: 3001
      middlewares:
        - name: authelia
          namespace: security
  tls:
    certResolver: letsencrypt-prod
